feat: paginator sets the limit and offset of the store queries
